--- a/section_2_news_article_pop_up/style.css
+++ b/section_2_news_article_pop_up/style.css
@@ -23,3 +23,72 @@ body {
   border-radius: 4px;
   transition: 0.5s;
 }
+
+.button:hover {
+  letter-spacing: 0.1rem;
+}
+
+#newsLetter {
+  position: fixed;
+  background-color: #fff;
+  z-index: 1000;
+  width: 450px;
+  padding: 80px 50px 50px;
+  transition: 0.5s;
+  border-radius: 4px;
+  top: -100%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  visibility: hidden;
+}
+
+#newsLetter.active {
+  top: 50%;
+  visibility: visible;
+}
+
+#newsLetter h2 {
+  text-align: center;
+  font-size: 1.6rem;
+  margin-bottom: 10px;
+}
+
+#newsLetter p {
+  text-align: center;
+  font-size: 1rem;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+#newsLetter .box {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+input,
+button {
+  width: 100%;
+  padding: 12px 15px;
+  font-size: 1rem;
+  margin: 8px 0;
+  border: 1px solid #cccccc22;
+  outline: none;
+  border-radius: 4px;
+}
+
+button {
+  width: 150px;
+  background-color: #551ac2;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  letter-spacing: 0.1rem;
+}
+
+.close {
+  position: absolute;
+  top: 15px;
+  right: 20px;
+}
