--- a/section_8_code_editor_project/style.css
+++ b/section_8_code_editor_project/style.css
@@ -2,4 +2,73 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
+}
+
+body {
+  background: linear-gradient(120deg, #1f1c2c, #928dab);
+  color: #ffffff;
+  height: 100vh;
+}
+
+.container {
+  width: 100%;
+  height: 95vh;
+  display: flex;
+  padding: 5px;
+}
+
+.left,
+.right {
+  flex-basis: 50%;
+  padding: 10px;
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.left .box {
+  height: 27vh;
+}
+
+textarea {
+  width: 100%;
+  height: 100%;
+  background-color: #1f1f1f;
+  border: none;
+  outline: none;
+  border-radius: 0 0 5px 5px;
+  color: #ffffff;
+  font-size: 18px;
+  padding: 10px 20px;
+  resize: none;
+}
+
+textarea:focus {
+  background-color: #2a2a2a;
+}
+
+iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+  outline: none;
+  border-radius: 0 0 5px 5px;
+  background-color: #333;
+}
+
+label {
+  background-color: #1a1a1a;
+  border-radius: 5px 5px 0 0;
+  height: 30px;
+  display: flex;
+  align-items: center;
+}
+
+.fa-brands, .fa-solid {
+  margin: 0 10px;
+  color: aqua;
 }
