--- a/section_9_day_of_the_week/style.css
+++ b/section_9_day_of_the_week/style.css
@@ -3,3 +3,30 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 90vh;
+  width: auto;
+  background-color: #ffe5e5;
+  font-family: cursive;
+}
+
+h1 {
+  font-size: 3rem;
+  color: #322d2d;
+}
+
+#weekday {
+  font-size: 5rem;
+  font-weight: 800;
+  color: #ff4d4d;
+  text-transform: uppercase;
+}
+
+#quote {
+  font-size: 2rem;
+  color: #663333;
+}
