--- a/section_10_stopwatch_application/style.css
+++ b/section_10_stopwatch_application/style.css
@@ -3,3 +3,86 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  display: flex;
+  font-family: monospace;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: linear-gradient(to right, #2f997b 0%, #5bb34d 100%);
+  color: #fff;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 2rem;
+  border-radius: 10px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+}
+
+h1 {
+  margin-bottom: 1rem;
+  font-size: 4rem;
+}
+
+.time {
+  font-size: 3rem;
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 0.5rem 1rem;
+  border-radius: 50px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+  margin-bottom: 1.5rem;
+}
+
+.button-container {
+  display: flex;
+  gap: 1rem;
+}
+
+button.start,
+button.stop,
+button.reset {
+  padding: 1rem 2rem;
+  font-size: 2rem;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  cursor: pointer;
+  color: #fff;
+  width: 150px;
+  transition:
+    background 0.3s,
+    transform 0.2s;
+}
+
+@keyframes bounce {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+}
+
+button.start {
+  background-color: #28a745;
+}
+
+button.stop {
+  background-color: #dc3545;
+}
+
+button.reset {
+  background-color: #ffc107;
+  color: #000;
+}
+
+button.start:hover {
+  background-color: #218838;
+  animation: bounce 0.5s;
+}
