--- a/section_11_weight_converter/style.css
+++ b/section_11_weight_converter/style.css
@@ -3,3 +3,64 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #f0f0f0;
+  text-align: center;
+}
+
+.container {
+  background-color: #ffffff;
+  padding: 5rem;
+  border-radius: 50%;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+}
+
+form {
+  margin-top: 1rem;
+}
+
+h1 {
+  font-size: 24px;
+  margin-bottom: 1rem;
+  color: #22ddff;
+}
+
+p {
+  font-size: 16px;
+  color: #ab3a3a;
+  margin-top: 1rem;
+}
+
+label {
+  padding: 10px;
+  font-size: 18px;
+  width: 100%;
+  display: block;
+  color: #333;
+}
+
+input {
+  font-size: 16px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  transition: border-color ease-in-out 0.3s;
+}
+
+input:focus {
+  border-color: #22dd33;
+  outline: none;
+}
+
+#convertedWeight {
+  font-weight: bold;
+  font-size: 20px;
+  color: #22ddff;
+  display: inline-block;
+}
