--- a/section_13_form_validation/style.css
+++ b/section_13_form_validation/style.css
@@ -3,3 +3,103 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  background: linear-gradient(to right, #71b7e6, #9b59b6);
+  font-family: sans-serif;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  background: linear-gradient(to bottom, #ffffff, #f4f7f9);
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  width: 400px;
+}
+
+.header {
+  padding: 20px 40px;
+  background: #f7f7f7;
+  border-bottom: 1px solid #f0f0f0;
+}
+
+.header h1 {
+  margin: 0;
+}
+
+form {
+  padding: 30px 40px;
+}
+
+.control-form {
+  margin-bottom: 10px;
+  padding-bottom: 20px;
+  position: relative;
+  transition: all 0.3s ease;
+}
+
+.control-form:hover {
+  transform: translateY(-5px);
+}
+
+.control-form label {
+  display: inline-block;
+  margin-bottom: 5px;
+}
+
+.control-form input {
+  width: 100%;
+  padding: 10px;
+  display: block;
+  border: 2px solid #f7f7f7;
+  border-radius: 4px;
+  font-size: 14px;
+  transition: border-color 0.3s ease;
+}
+
+.control-form input:focus {
+  border-color: #777;
+  outline: none;
+}
+
+.control-form.success input {
+  border-color: #2ecc71;
+}
+
+.control-form.fail input {
+  border-color: #e74c3c;
+}
+
+.control-form small {
+  color: #e74c3c;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  visibility: hidden;
+  transition: all 0.3s ease;
+}
+
+.control-form.fail small {
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0px);
+}
+
+.form button {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  background: #3498db;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+.form button:hover {
+  background: #2980b9;
+}
